--- a/app/css/style.css
+++ b/app/css/style.css
@@ -6,7 +6,7 @@ body {
 .form-signin {
     width: 100%;
     max-width: 330px;
-    padding: 15px;
+    padding-top: 15%;
     margin: 0 auto;
 }
 
@@ -34,6 +34,7 @@ body {
 
 .form-signin input[type="password"] {
     margin-bottom: 10px;
+    margin-top: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
@@ -62,6 +63,14 @@ body {
 
 #wrapper.toggled #sidebar-wrapper {
     margin-left: 0;
+}
+
+.body-auth  {
+    min-height: 100vh;
+    background: url("../images/background.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
 }
 
 @media (min-width: 768px) {
