--- a/app/views/common/navbar.html
+++ b/app/views/common/navbar.html
@@ -1,7 +1,20 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark static-top justify-content-between">
-    <a class="navbar-brand" href="javascript:void(0)">
-        <img src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt=""> Bootstrap
-    </a>
-
-    <button class="btn btn-outline-light" ng-controller="loginController as vm" ng-click="vm.sair()">Sair</button>
-</nav>
+<nav class="navbar navbar-expand-lg " color-on-scroll="500">
+        
+            
+        <div class="container-fluid">
+            <button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-bar burger-lines"></span>
+                <span class="navbar-toggler-bar burger-lines"></span>
+                <span class="navbar-toggler-bar burger-lines"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navigation">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" ng-controller="loginController as vm" ng-click="vm.sair()" style="cursor: pointer">
+                            <span class="no-icon"><i class="fa fa-power-off"></i> Sair</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
