[inicio] crud de usuario

--- a/app/views/common/sidebar.html
+++ b/app/views/common/sidebar.html
@@ -13,9 +13,9 @@
                 </a>
             </li>
             <li ui-sref-active="active">
-                <a class="nav-link" ui-sref="app.teste.cadastrar">
+                <a class="nav-link" ui-sref="app.usuario.listar">
                     <i class="nc-icon nc-circle-09"></i>
-                    <p>User Profile</p>
+                    <p>Jogadores</p>
                 </a>
             </li>
         </ul>
