--- a/app/assets/css/light-bootstrap-dashboard.css
+++ b/app/assets/css/light-bootstrap-dashboard.css
@@ -3958,9 +3958,9 @@ Copyright (c) 2015 Daniel Eden
     .footer:not(.footer-big) nav>ul li:first-child {
         margin-left: 0;
     }
-    .card form [class*="col-"] {
+    /* .card form [class*="col-"] {
         padding: 6px;
-    }
+    } */
     .card form [class*="col-"]:first-child {
         padding-left: 15px;
     }
